# TESTING-CHAMBER-NI-AJ

.github/workflows/: EEE111-lab-checker.yml
CarlFixes/: carlcode.py
EEE111-SDEMRU-aaangeles12/: ASAAAAD.py  MARCUS TESTS.py  test.py
EEE111-SDEMRU-aaangeles12/EEE111-SDEMRU-aaangeles12/week4/: dec-bin-hex.py
EEE111-SDEMRU-aaangeles12/SP/: KAY AJ.py  poker-cards (1).py  poker-hands-ui (1).py
Pao/: README.md
Pao/research-poultry/: .gitignore  README.md  pyproject.toml
Pao/research-poultry/src/: main.py
Wayne/: dec-bin-hexDRAFT.py
swproj1/: KAY AJ.py  swproj1.py
week0/: hello-eee111.py
week1/: week1-test.py  week1.py
week2/: week2-test.py  week2.py
week3/: bin2dec-test.py  bin2dec.py
week4/: dec-bin-hex-test-data.txt  dec-bin-hex.py
week5/: poker-cards.py  poker-hands-test-data.txt  poker-hands-ui.py
