[tool.poetry]
name = "research-poultry"
version = "0.1.0"
description = "Poultry Research"
authors = ["Athereo <athereoandromeda@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11.2"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
